--- a/CA_Petshop/CA_Petshop.Infrastructure.Data.SQL/CA_Petshop.Infrastructure.Data.SQL.csproj
+++ b/CA_Petshop/CA_Petshop.Infrastructure.Data.SQL/CA_Petshop.Infrastructure.Data.SQL.csproj
@@ -1,28 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.11" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CA_Petshop.Core.Entity\CA_Petshop.Core.Entity.csproj" />
     <ProjectReference Include="..\CA_Petshop.Core\CA_Petshop.Core.csproj" />
-    <ProjectReference Include="..\CA_Petshop.Infrastructure.Data.SQL\CA_Petshop.Infrastructure.Data.SQL.csproj" />
-    <ProjectReference Include="..\CA_Petshop.Infrastructure.Data\CA_Petshop.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
